# MEDIQUEUE

./: .gitattributes  .gitignore  AGENTS.md  README.md  run_mediqueue.ps1  run_mediqueue.sh
api/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  __init__.py  entrypoint.sh  main.py  pyproject.toml
api/adapters/: AGENTS.md  deepseek_adapter.py  llm_adapter.py  mock_llm_adapter.py  tts_adapter.py
api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/core/: AGENTS.md  __init__.py  config.py  enums.py  errors.py
api/routes/: AGENTS.md  calls.py  dev.py  health.py  priority.py  queue.py  tts.py  websocket.py
api/schemas/: AGENTS.md  __init__.py  common.py  dev.py  patient.py  priority.py  queue.py  tts.py
api/services/: AGENTS.md  connection_manager.py  dependencies.py  priority_service.py  queue_service.py  tts_service.py
api/store/: AGENTS.md  __init__.py  in_memory_store.py
api/tests/: test_tts.py
docker/: docker-compose.yml
docs/: backend_api_architecture.md  design.md  frontend_architecture.md  native_description.md  prd_v1.md  prd_v2.md
web/: .env.example  AGENTS.md  Dockerfile  README.md  entrypoint.sh  index.html  metadata.json  package.json
web/src/: AGENTS.md  App.tsx  types.ts
web/src/components/: OfflineBanner.tsx  StatusChip.tsx
web/src/display/: TVDisplay.tsx
web/src/doctor/: DoctorRoom.tsx
web/src/hooks/: AGENTS.md  useMediQueueBridge.ts
web/src/lib/: AGENTS.md  api-client.ts
web/src/patient/: PatientMobile.tsx
web/src/utils/: tts.ts
